@@ -1,3 +1,8 @@
+Fri May  8 15:43:11 2015  Shugo Maeda  <shugo@ruby-lang.org>
+
+	* lib/net/imap.rb (body_ext_mpart): should work even if body-fld-dsp
+	  is omitted.  [ruby-core:69093] [Bug #11128]
+
 Fri May  8 15:05:57 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>
 
 	* doc/syntax/control_expressions.rdoc: fix a missing "a"
